fix: k8s static deploy

--- a/deploy/generate-k8s-static.yaml
+++ b/deploy/generate-k8s-static.yaml
@@ -1,4 +1,2 @@
 # TODO: move this to k8s docker and makefile
-helm template tracee ./helm/tracee/ > /tmp/tracee.yaml
-
-cat ./helm/tracee/crds/tracee.aquasec.com_policies.yaml /tmp/tracee.yaml > kubernetes/tracee/tracee.yaml
+helm template tracee ./helm/tracee/ > ./kubernetes/tracee/tracee.yaml
