--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,17 +18,18 @@ nav:
     - Docs:
           - Overview: docs/overview.md
           - Installation:
-                - Overview: docs/install/overview.md
+                - Overview: docs/install/index.md
                 - Prerequisites: docs/install/prerequisites.md
                 - Docker: docs/install/docker.md
                 - Kubernetes: docs/install/kubernetes.md
-                - Override OS files: docs/install/override-os-files.md
-                - Packages:
-                      - Ubuntu: docs/install/distros/ubuntu.md
-                      - Fedora: docs/install/distros/fedora.md
-                      - NixOS: docs/install/distros/nix-nixos.md
+                - Container Engines: docs/install/container-engines.md
+                - Prometheus: docs/install/prometheus.md
+                - Healthz: docs/install/healthz.md
+                - Configure Tracee:
+                      - CLI: docs/install/config/cli.md
+                      - Kubernetes: docs/install/config/kubernetes.md
           - Events:
-                - Overview: docs/events/overview.md
+                - Overview: docs/events/index.md
                 - Built-in Events:
                       - Security Events:
                             - Overview: docs/events/builtin/signatures/index.md
@@ -43,6 +44,7 @@ nav:
                             - Dropped Executable: docs/events/builtin/signatures/dropped_executable.md
                             - Dynamic Code Loading: docs/events/builtin/signatures/dynamic_code_loading.md
                             - Fileless Execution: docs/events/builtin/signatures/fileless_execution.md
+                            - Format: docs/events/builtin/signatures/format.md
                             - Hidden File Created: docs/events/builtin/signatures/hidden_file_created.md
                             - Illegitimate Shell: docs/events/builtin/signatures/illegitimate_shell.md
                             - K8S API Connection: docs/events/builtin/signatures/kubernetes_api_connection.md
@@ -84,9 +86,10 @@ nav:
                             - container_remove: docs/events/builtin/extra/container_remove.md
                             - do_sigaction: docs/events/builtin/extra/do_sigaction.md
                             - file_modification: docs/events/builtin/extra/file_modification.md
+                            - format: docs/events/builtin/extra/format.md
                             - ftrace_hook: docs/events/builtin/extra/ftrace_hook.md
                             - hidden_kernel_module: docs/events/builtin/extra/hidden_kernel_module.md
-                            - hooked_syscalls: docs/events/builtin/extra/hooked_syscalls.md
+                            - hooked_syscall: docs/events/builtin/extra/hooked_syscall.md
                             - kallsysm_lookup_name: docs/events/builtin/extra/kallsyms_lookup_name.md
                             - magic_write: docs/events/builtin/extra/magic_write.md
                             - mem_prot_alert: docs/events/builtin/extra/mem_prot_alert.md
@@ -558,37 +561,20 @@ nav:
                       - Overview: docs/events/custom/overview.md
                       - Go: docs/events/custom/golang.md
                       - Rego: docs/events/custom/rego.md
-                      - Analyze: docs/events/custom/analyze.md
           - Policies:
                 - Overview: docs/policies/index.md
                 - Scopes: docs/policies/scopes.md
                 - Rules: docs/policies/rules.md
-          - Filters:
-                - Filtering: docs/filters/filtering.md
-                - Flags Manuals:
-                      - scope: docs/flags/scope.1.md
-                      - events: docs/flags/events.1.md
-                      - output: docs/flags/output.1.md
-                      - capture: docs/flags/capture.1.md
-                      - config: docs/flags/config.1.md
-                      - cri: docs/flags/containers.1.md
-                      - rego: docs/flags/rego.1.md
-                      - cache: docs/flags/cache.1.md
-                      - capabilities: docs/flags/capabilities.1.md
-                      - log: docs/flags/log.1.md
+                - Usage:
+                      - CLI: docs/policies/usage/cli.md
+                      - Kubernetes: docs/policies/usage/kubernetes.md
           - Outputs:
+                - Overview: docs/outputs/index.md
                 - Output Formats: docs/outputs/output-formats.md
                 - Output Options: docs/outputs/output-options.md
                 - Logging: docs/outputs/logging.md
-          - Config:
-                - Overview: docs/config/overview.md
-                - Kubernetes: docs/config/kubernetes.md
           - Forensics:
-                - Getting Started: docs/forensics/index.md
-          - Integrations:
-                - Container Engines: docs/integrating/container-engines.md
-                - Prometheus: docs/integrating/prometheus.md
-                - Healthz: docs/integrating/healthz.md
+                - Overview: docs/forensics/index.md
           - Data Sources:
                 - Overview: docs/data-sources/overview.md
                 - Containers: docs/data-sources/containers.md
@@ -599,17 +585,27 @@ nav:
                 - Dropping Capabilities: docs/deep-dive/dropping-capabilities.md
                 - Kernel Symbols: docs/deep-dive/ksyms.md
                 - Secure Tracing: docs/deep-dive/secure-tracing.md
+                - OS Info: docs/deep-dive/os-info.md
+          - CLI Flags:
+                - scope: docs/flags/scope.1.md
+                - events: docs/flags/events.1.md
+                - output: docs/flags/output.1.md
+                - capture: docs/flags/capture.1.md
+                - config: docs/flags/config.1.md
+                - crs: docs/flags/containers.1.md
+                - rego: docs/flags/rego.1.md
+                - cache: docs/flags/cache.1.md
+                - capabilities: docs/flags/capabilities.1.md
+                - log: docs/flags/log.1.md
     - Contributing:
           - Overview: contributing/overview.md
           - Documentation: contributing/documentation.md
           - Source Code Guidelines: contributing/guidelines.md
-          - Architecture: contributing/architecture.md
           - Setup Development Machine with Vagrant: contributing/setup-development-machine-with-vagrant.md
           - Building:
                 - Building Tracee: contributing/building/building.md
                 - Building Environment: contributing/building/environment.md
                 - Building Containers: contributing/building/containers.md
-                - OS Packaging: contributing/building/packaging.md
 theme:
     name: material
     language: "en"
