--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
                 - Prometheus: docs/install/prometheus.md
                 - Healthz: docs/install/healthz.md
                 - Configure Tracee:
+                      - Overview: docs/install/config/index.md
                       - CLI: docs/install/config/cli.md
                       - Kubernetes: docs/install/config/kubernetes.md
           - Events:
