--- a/.github/DISCUSSION_TEMPLATE/adopters.yml
+++ b/.github/DISCUSSION_TEMPLATE/adopters.yml
@@ -32,5 +32,5 @@ body:
         * User feedback
         * Collaboration with other companies and organisations
         * Or just to have a chat with you about Tracee. 
-        If any of this interests you or your marketing team, please reach out at: opensourcegroup@aquasec.com
+        If any of this interests you or your marketing team, please reach out at: oss@aquasec.com
         We would love to hear from you!
