--- a/builder/Dockerfile.man
+++ b/builder/Dockerfile.man
@@ -4,7 +4,12 @@ ARG DEBIAN_FRONTEND="noninteractive"
 ENV DEBCONF_NOWARNINGS="yes"
 
 RUN apt-get update -y && \
-    apt-get install -y make && \
-    apt-get install -y pandoc
+    apt-get install -y make wget
+
+ARG PANDOC_VERSION="3.1.2"
+ARG PANDOC_DEB="pandoc-${PANDOC_VERSION}-1-amd64.deb"
+
+RUN wget -q https://github.com/jgm/pandoc/releases/download/${PANDOC_VERSION}/${PANDOC_DEB} && \
+    dpkg -i ${PANDOC_DEB}
 
 WORKDIR /tracee
