--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -81,13 +81,17 @@ jobs:
         uses: actions/checkout@v3
       - name: Check if flags flags man/markdown docs were changed
         id: changed-files
-        uses: tj-actions/changed-files@v40
+        uses: tj-actions/changed-files@v40.2.0
         with:
           files_yaml: |
             md_files:
               - "docs/docs/flags/**/*.1.md"
             man_files:
               - "docs/man/**/*.1"
+      - name: DEBUGGING tj-actions/changed-files
+        run: |
+          echo md_files_any_modified ${{ steps.changed-files.outputs.md_files_any_modified }}
+          echo man_files_any_modified ${{ steps.changed-files.outputs.man_files_any_modified }}
       - name: Ensure updates of *.1.md and *.1 pairs
         if: ${{ steps.changed-files.outputs.md_files_any_modified == 'true' || steps.changed-files.outputs.man_files_any_modified == 'true' }}
         run: |
