--- a/builder/Dockerfile.alpine-tracee-make
+++ b/builder/Dockerfile.alpine-tracee-make
@@ -2,7 +2,7 @@
 # Creates a local docker building environment (alpine).
 #
 
-FROM alpine:3.17
+FROM alpine:3.18
 
 ARG uid=1000
 ARG gid=1000
@@ -37,22 +37,26 @@ RUN apk --no-cache add man-pages man-pages-posix bash-completion vim && \
 
 # install staticcheck
 
-RUN GOROOT=/usr/lib/go GOPATH=$HOME/go go install honnef.co/go/tools/cmd/staticcheck@latest && \
+RUN GOROOT=/usr/lib/go GOPATH=$HOME/go \
+    go install honnef.co/go/tools/cmd/staticcheck@latest && \
     cp $HOME/go/bin/staticcheck /usr/bin/
 
 # install goimports-reviser
 
-RUN GOROOT=/usr/lib/go GOPATH=$HOME/go go install github.com/incu6us/goimports-reviser/v3@latest && \
+RUN GOROOT=/usr/lib/go GOPATH=$HOME/go \
+    go install github.com/incu6us/goimports-reviser/v3@latest && \
     cp $HOME/go/bin/goimports-reviser /usr/bin/
 
 # install revive
 
-RUN GOROOT=/usr/lib/go GOPATH=$HOME/go go install github.com/mgechev/revive@latest && \
+RUN GOROOT=/usr/lib/go GOPATH=$HOME/go \
+    go install github.com/mgechev/revive@latest && \
     cp $HOME/go/bin/revive /usr/bin/
 
 # install errcheck
 
-RUN GOROOT=/usr/lib/go GOPATH=$HOME/go go install github.com/kisielk/errcheck@latest && \
+RUN GOROOT=/usr/lib/go GOPATH=$HOME/go \
+    go install github.com/kisielk/errcheck@latest && \
     cp $HOME/go/bin/errcheck /usr/bin/
 
 # allow TRACEE* and LIBBPFGO* environment variables through sudo
