--- a/builder/Dockerfile.ubuntu-tracee-make
+++ b/builder/Dockerfile.ubuntu-tracee-make
@@ -15,12 +15,10 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
     apt-get install -y bash git curl rsync && \
     apt-get install -y llvm clang clangd clang-format golang make gcc && \
     apt-get install -y llvm-12 clang-12 clangd-12 clang-format-12 && \
-    apt-get install -y llvm-13 clang-13 clangd-13 clang-format-13 && \
     apt-get install -y linux-headers-generic && \
     apt-get install -y libelf-dev && \
     apt-get install -y zlib1g-dev && \
     update-alternatives --install /usr/bin/clang clang /usr/bin/clang-12 130 --slave /usr/bin/clang++ clang++ /usr/bin/clang++-12 --slave /usr/bin/llc llc /usr/bin/llc-12 --slave /usr/bin/clang-format clang-format /usr/bin/clang-format-12 --slave /usr/bin/clangd clangd /usr/bin/clangd-12 && \
-    update-alternatives --install /usr/bin/clang clang /usr/bin/clang-13 130 --slave /usr/bin/clang++ clang++ /usr/bin/clang++-13 --slave /usr/bin/llc llc /usr/bin/llc-13 --slave /usr/bin/clang-format clang-format /usr/bin/clang-format-13 --slave /usr/bin/clangd clangd /usr/bin/clangd-13 && \
     update-alternatives --install /usr/bin/clang clang /usr/bin/clang-14 140 --slave /usr/bin/clang++ clang++ /usr/bin/clang++-14 --slave /usr/bin/llc llc /usr/bin/llc-14 --slave /usr/bin/clang-format clang-format /usr/bin/clang-format-14 --slave /usr/bin/clangd clangd /usr/bin/clangd-14
 
 # install OPA
@@ -64,29 +62,33 @@ RUN export uid=$uid gid=$gid && \
 RUN export DEBIAN_FRONTEND=noninteractive && \
     altarch=$(uname -m | sed 's:x86_64:amd64:g' | sed 's:aarch64:arm64:g') && \
     apt-get update && \
-    curl -L -o /tmp/golang.tar.xz https://go.dev/dl/go1.19.5.linux-${altarch}.tar.gz && \
+    curl -L -o /tmp/golang.tar.xz https://go.dev/dl/go1.21.5.linux-${altarch}.tar.gz && \
     tar -C /usr/local -xzf /tmp/golang.tar.xz && \
     update-alternatives --install /usr/bin/go go /usr/local/go/bin/go 1 && \
     update-alternatives --install /usr/bin/gofmt gofmt /usr/local/go/bin/gofmt 1
 
 # install staticcheck
 
-RUN GOROOT=/usr/local/go GOPATH=$HOME/go go install honnef.co/go/tools/cmd/staticcheck@latest && \
+RUN GOROOT=/usr/local/go GOPATH=$HOME/go \
+    go install honnef.co/go/tools/cmd/staticcheck@latest && \
     cp $HOME/go/bin/staticcheck /usr/bin/
 
 # install goimports-reviser
 
-RUN GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/incu6us/goimports-reviser/v3@latest && \
+RUN GOROOT=/usr/local/go GOPATH=$HOME/go \
+    go install github.com/incu6us/goimports-reviser/v3@latest && \
     cp $HOME/go/bin/goimports-reviser /usr/bin/
 
 # install revive
 
-RUN GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/mgechev/revive@latest && \
+RUN GOROOT=/usr/local/go GOPATH=$HOME/go \
+    go install github.com/mgechev/revive@latest && \
     cp $HOME/go/bin/revive /usr/bin/
 
 # install errcheck
 
-RUN GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/kisielk/errcheck@latest && \
+RUN GOROOT=/usr/local/go GOPATH=$HOME/go \
+    go install github.com/kisielk/errcheck@latest && \
     cp $HOME/go/bin/errcheck /usr/bin/
 
 USER tracee
