chore(review): no need to check amount of ret variables

--- a/.revive.toml
+++ b/.revive.toml
@@ -69,8 +69,7 @@ enableAllRules = true
 [rule.flag-parameter]
     Disabled = true
 [rule.function-result-limit]
-    Disabled = false
-    Arguments = [3]
+    Disabled = true
 [rule.function-length]
     Disabled = true
 [rule.get-return]
