tests(inst): add writable data source test

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -69,6 +69,7 @@ env:
     CONTAINERS_DATA_SOURCE
     PROCTREE_DATA_SOURCE
     DNS_DATA_SOURCE
+    WRITABLE_DATA_SOURCE
 jobs:
   #
   # DOC VERIFICATION
