fix: pin revive to e33fb87
revive v1.3.5 wrongly includes a replace directive which breaks the
go install command.

This commit pins revive to e33fb87 that is the fix for this issue.

--- a/builder/Dockerfile.alpine-tracee-make
+++ b/builder/Dockerfile.alpine-tracee-make
@@ -81,7 +81,7 @@ RUN GOROOT=/usr/lib/go GOPATH=$HOME/go \
 # install revive
 
 RUN GOROOT=/usr/lib/go GOPATH=$HOME/go \
-    go install github.com/mgechev/revive@latest && \
+    go install github.com/mgechev/revive@e33fb87 && \
     cp $HOME/go/bin/revive /usr/bin/
 
 # install errcheck
