--- a/.github/actions/build-dependencies/action.yaml
+++ b/.github/actions/build-dependencies/action.yaml
@@ -76,7 +76,7 @@ runs:
       shell: bash
     - name: Install revive
       run: |
-        GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/mgechev/revive@latest
+        GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/mgechev/revive@e33fb87
         sudo cp $HOME/go/bin/revive /usr/bin/
       shell: bash
     - name: Install goimports-reviser
