--- a/builder/Dockerfile.ubuntu-tracee-make
+++ b/builder/Dockerfile.ubuntu-tracee-make
@@ -82,7 +82,7 @@ RUN GOROOT=/usr/local/go GOPATH=$HOME/go \
 # install revive
 
 RUN GOROOT=/usr/local/go GOPATH=$HOME/go \
-    go install github.com/mgechev/revive@latest && \
+    go install github.com/mgechev/revive@e33fb87 && \
     cp $HOME/go/bin/revive /usr/bin/
 
 # install errcheck
