--- a/builder/Dockerfile.protoc
+++ b/builder/Dockerfile.protoc
@@ -5,6 +5,7 @@ RUN wget https://github.com/protocolbuffers/protobuf/releases/download/v23.4/pro
 	unzip protoc-23.4-linux-x86_64.zip -d /usr/local
 
 RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28 && \
-	go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2
+	go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2 && \
+	go install github.com/mitchellh/protoc-gen-go-json@master
 
 WORKDIR /tracee
