--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -263,9 +263,9 @@ jobs:
   #
   generate-matrix:
     name: Generate Test Matrix
-    #needs:
-    #  - verify-signatures
-    #  - verify-tools
+    needs:
+      - verify-signatures
+      - verify-tools
     runs-on: ubuntu-latest
     outputs:
       matrix01: ${{ steps.set-matrix.outputs.matrix01 }}
