chore(ci): remove deprecating set-output
set-output is deprecated and will be removed in the future.

More info: https://github.blog/changelog/2022-10-11-github-actions-deprecating-save-state-and-set-output-commands/

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -312,7 +312,7 @@ jobs:
                   output+="{\"job_name\": \"$job\", \"arch\": \"$arch\", \"ami\": \"$ami\", \"sufix\": \"$num\"}"
               done
             output+="]"
-            echo "::set-output name=matrix$num::$output"
+            echo "matrix$num=$output" >> $GITHUB_OUTPUT
             echo "matrix$num=$output"
           done
         shell: bash
